objects/Error_Log__c.object
<CustomObject>
    <label>System Event</label>
    <nameField>
        <displayFormat>LOG - {000000}</displayFormat>
        <label>Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Log_Details__c</fullName>
        <label>Log Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Lod_DateTime__c</fullName>
        <label>Lod Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <label>Process Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>